ncc/testsuite/positive/bug-0841.n
using System.Console;

namespace Test
{
  class AA[T] { }
  class BB[T] : AA[BB[BB[T]]] { }

  class A[T] { }
  class B[T] : A[B[B[B[B[B[B[B[B[B[T]]]]]]]]]] { }
  
  module Program
  {
    public Main() : void
    {
      def bb = null : BB[int];
      WriteLine(if (bb == null) "null" else "not null");

      def b = null : B[B[B[int]]];
      WriteLine(if (b == null) "null" else "not null");
    }
  }
}

/*
BEGIN-OUTPUT
null
null
END-OUTPUT
*/
