ncc/testsuite/negative/namespace-b231_3.n
using Syyyyyyyyyyyyystem; // E: referenced namespace .* does not exist

class A : DateTime // E: unbound type name `DateTime'
{
}

public module Program
{
    Main() : void
    {
    }
}
